@@ -42,6 +42,8 @@
 #include "IECore/Op.h"
 #include "IECore/ParameterisedProcedural.h"
 #include "IECore/WorldBlock.h"
+#include "IECorePython/ScopedGILLock.h"
+#include "IECorePython/ScopedGILRelease.h"
 
 #include "CoreHoudini.h"
 #include "NodePassData.h"
@@ -119,9 +121,17 @@ OP_ERROR SOP_ToHoudiniConverter::cookMySop( OP_Context &context )
 	{
 		IECore::ParameterisedProcedural *procedural = IECore::runTimeCast<IECore::ParameterisedProcedural>( sop->getParameterised() );
 		IECore::CapturingRendererPtr renderer = new IECore::CapturingRenderer();
+		// We are acquiring and releasing the GIL here to ensure that it is released when we render. This has
+		// to be done because a procedural might jump between c++ and python a few times (i.e. if it spawns
+		// subprocedurals that are implemented in python). In a normal call to cookMySop, this wouldn't be an
+		// issue, but if cookMySop was called from HOM, hou.Node.cook appears to be holding onto the GIL.
+		IECorePython::ScopedGILLock gilLock;
 		{
-			IECore::WorldBlock worldBlock( renderer );
-			procedural->render( renderer );
+			IECorePython::ScopedGILRelease gilRelease;
+			{
+				IECore::WorldBlock worldBlock( renderer );
+				procedural->render( renderer );
+			}
 		}
 		renderable = renderer->world();
 	}
